add code for checking authorization on api handlers
